# CompVisionPostprocess

./: .gitignore  CMakeLists.txt  README.md
include/: AcidEffect.h  Application.h  BlurEffect.h  ChromaticAberrationEffect.h  ContourEffect.h  Controller.h  DenoisingEffect.h  EdgesEffect.h  Effect.h  Framebuffer.h  GrayscaleEffect.h  IndexBuffer.h  NegativeEffect.h  PostProcessingPipeline.h  Renderer.h  Shader.h  TriangulationEffect.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  WebcamCapture.h
res/shaders/: Aberration.shader  Acid.shader  Basic.shader  Grayscale.shader
src/: Application.cpp  Controller.cpp  Framebuffer.cpp  IndexBuffer.cpp  PostProcessingPipeline.cpp  Renderer.cpp  Roboto-Medium.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  WebcamCapture.cpp  main.cpp
utils/: Event.h  Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
